2.auth-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gdg-vientiane-auth
  namespace: gdg-vientiane-api
  labels:
    app: gdg-vientiane-auth
spec:
  selector:
    matchLabels:
      app: gdg-vientiane-auth
  template:
    metadata:
      labels:
        app: gdg-vientiane-auth
    spec:
      containers:
      - name: gdg-vientiane-auth-container
        image: 883347473856.dkr.ecr.ap-southeast-1.amazonaws.com/gdg-auth-service:latest
        imagePullPolicy: Always
        ports:
            - containerPort: 7000

---
apiVersion: v1
kind: Service
metadata:
  namespace: gdg-vientiane-api
  name: gdg-vientiane-auth-service
  labels:
    app: gdg-vientiane-auth
spec:
  type: NodePort
  selector:
    app: gdg-vientiane-auth
  ports:
    - port: 80
      targetPort: 7000
      protocol: TCP
